--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   easy_image_viewer: ^1.5.1
   lottie: ^3.1.2
   material_symbols_icons: ^4.2788.0
+  path: ^1.9.0
+  path_provider: ^2.1.4
   sqflite: ^2.4.0
   webview_flutter: ^4.10.0
 
