--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   material_symbols_icons: ^4.2788.0
   path: ^1.9.0
   path_provider: ^2.1.4
+  rename_app: ^1.6.1
   sqflite: ^2.4.0
   webview_flutter: ^4.10.0
 
@@ -60,7 +61,7 @@ dev_dependencies:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/images/logo_3.png"
+  image_path: "assets/images/ikon_trans.png"
 
 # The following section is specific to Flutter packages.
 flutter:
