--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   path_provider: ^2.1.4
   rename_app: ^1.6.1
   sqflite: ^2.4.0
+  url_launcher: ^6.3.1
   webview_flutter: ^4.10.0
 
 dev_dependencies:
