--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   easy_image_viewer: ^1.5.1
+  excel: ^2.0.5
+  fl_chart: ^0.68.0
+  intl: ^0.19.0 #number format/date format
+  datetime_picker_formfield_new: ^2.1.0 #datepicker
   lottie: ^3.1.2
   material_symbols_icons: ^4.2788.0
   path: ^1.9.0
   path_provider: ^2.1.4
+  permission_handler: ^11.3.1
   rename_app: ^1.6.1
   sqflite: ^2.4.0
   url_launcher: ^6.3.1
